; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_device.c_device_supported.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_device.c_device_supported.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@device_supported.read_only = internal global i32 -1, align 4
@.str = private unnamed_addr constant [5 x i8] c"/sys\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @device_supported to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @device_supported() #0 {
  %1 = load i32, i32* @device_supported.read_only, align 4
  %2 = icmp slt i32 %1, 0
  br i1 %2, label %3, label %5

3:                                                ; preds = %0
  %4 = call i32 @path_is_read_only_fs(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  store i32 %4, i32* @device_supported.read_only, align 4
  br label %5

5:                                                ; preds = %3, %0
  %6 = load i32, i32* @device_supported.read_only, align 4
  %7 = icmp sle i32 %6, 0
  %8 = zext i1 %7 to i32
  ret i32 %8
}

declare dso_local i32 @path_is_read_only_fs(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
